fixes for navbar-item alignment issue

--- a/sgds/sass/sgds-customise/_sgds-initial-variables.scss
+++ b/sgds/sass/sgds-customise/_sgds-initial-variables.scss
@@ -89,8 +89,8 @@ $lineheight-offset: 0.5rem !default;
 $weight-light: 300 !default;
 $weight-normal: 400 !default;
 $weight-medium: 500 !default;
-$weight-semibold: 600 !default;
-$weight-bold: 700 !default;
+$weight-semibold: 700 !default;
+$weight-bold: 900 !default;
 
 // Responsiveness
 
